--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,14 @@
+:root{
+    --color-background: #1d2026;
+    --color-text:#fff;
+    }
+
+
+
 .background{
-    background-color: #1d2026;
+    background-color: --color-background;
     min-height: 100vh;
     width: 100%;
-    color: #fff;
+    color: --color-text;
     position: relative;
 }
