--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,9 @@
 
 
 .background{
-    background-color: --color-background;
+    background-color: var(--color-background);
     min-height: 100vh;
     width: 100%;
-    color: --color-text;
+    color: var(--color-text);
     position: relative;
 }
