modfie nav component

--- a/components/nav.html
+++ b/components/nav.html
@@ -1,12 +1,15 @@
-<nav class="nav collapsible">
-  <a href="/"><img src="images/logo.svg" alt="" /></a>
-  <svg class="icon icon--white nav__icon">
-    <use xlink:href="images/sprite.svg#menu"></use>
-  </svg>
-  <ul class="list nav__list collapsible__content">
-    <li class="nav__item"><a href="#">1</a></li>
-    <li class="nav__item"><a href="#">2</a></li>
-    <li class="nav__item"><a href="#">3</a></li>
-    <li class="nav__item"><a href="#">4</a></li>
-  </ul>
+<nav class="nav">
+  <a href="/"><img class="nav__logo" src="/images/logo.png" alt="" /></a>
+  <div class="collapsible">
+    <a><img class="icon icon--white nav__icon" src="/images/menu.png" /></a>
+    <ul class="list nav__list collapsible__content">
+      <li class="nav__item"><a href="#">Latest</a></li>
+      <li class="nav__item"><a href="#">Modern</a></li>
+      <li class="nav__item"><a href="#">Contemporary</a></li>
+      <li class="nav__item">
+        <a href="#">Affordable</a>
+      </li>
+      <button type="button" class="list_button"><span></span></button>
+    </ul>
+  </div>
 </nav>
