--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ html{
     flex-wrap: wrap;
     padding: 0 1rem;
     align-items: center;
+    padding-top: 10px;
   }
   
   .nav__list{
@@ -93,7 +94,7 @@ a{
     flex: 1;
     text-align: right;
     padding-left: 0;
-    margin-top: 15px;
+    
 }
 .nav__item{
     display: inline-block;
