--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,14 @@
     --color-text:#fff;
     --color-background-button:#efefef;
     --color-background-span:#999;
+    --color-background-mainbutton:#00986f;
     }
 
 html{
         font-size: 62.5%; 
+        margin: 0; height: 100%; overflow: hidden;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        
      }
 
 .background{
@@ -158,6 +162,31 @@ a{
         width: 700px;
         height: 50vh;
         
+    }
+
+    /* Text-container */
+    .Text-container{
+        max-width: 600px;
+        margin-top: 7%;
+        margin-left: 50%;
+    }
+
+    .Text-container h1{
+        font-size: 5rem;
+        font-weight: 400;
+    }
+    .Text-container p{
+        font-size: 2rem;    
+    }
+    .Text-container a{
+        text-decoration: none;
+        background-color: var(--color-background-mainbutton) ;
+        padding: 14px 14px ;
+        display: inline-block;
+        color: var(--color-text);
+        font-size: 2rem;
+        margin-top: 10px;
+        border-radius: 30px;
     }
  
   /* collapsibles
